@@ -158,6 +158,8 @@ require_once __DIR__ . '/common.php';
 \define('_MI_WGEVENTS_GMAPS_HEIGHT', '"Google Map" height (in pixels)');
 \define('_MI_WGEVENTS_GMAPS_ENABLECAL', 'Show google map in calendar view');
 \define('_MI_WGEVENTS_GMAPS_ENABLECAL_DESC', 'Define whether google map should be shown in calendar view and where');
+\define('_MI_WGEVENTS_GMAPS_ENABLEINDEX', 'Show google map on index page');
+\define('_MI_WGEVENTS_GMAPS_ENABLEINDEX_DESC', 'Define whether google map should be shown on index page and where');
 \define('_MI_WGEVENTS_GMAPS_ENABLEEVENT', 'Show google map in event list view');
 \define('_MI_WGEVENTS_GMAPS_ENABLEEVENT_DESC', 'Define whether google map should be shown in list view and where');
 \define('_MI_WGEVENTS_GMAPS_POSITION_NONE', 'Do not show');
