@@ -157,7 +157,11 @@ require_once __DIR__ . '/common.php';
                                        <br>necessary APIs: Geocoding API, Maps JavaScript API, Places API');
 \define('_MI_WGEVENTS_GMAPS_HEIGHT', '"Google Map" Höhe (in Pixel)');
 \define('_MI_WGEVENTS_GMAPS_ENABLECAL', 'Google Map in der Kalenderansicht anzeigen');
+\define('_MI_WGEVENTS_GMAPS_ENABLECAL_DESC', 'Definiere ob Google Maps in der Kalenderansicht angezeigt werden soll und wo');
+\define('_MI_WGEVENTS_GMAPS_ENABLEINDEX', 'Google Map auf der Index-Seite anzeigen');
+\define('_MI_WGEVENTS_GMAPS_ENABLEINDEX_DESC', 'Definiere ob Google Maps auf der Index-Seite angezeigt werden soll und wo');
 \define('_MI_WGEVENTS_GMAPS_ENABLEEVENT', 'Google Map in der Event-Listenansicht anzeigen');
+\define('_MI_WGEVENTS_GMAPS_ENABLEEVENT_DESC', 'Definiere ob Google Maps in der Event-Listenansicht angezeigt werden soll und wo');
 \define('_MI_WGEVENTS_GMAPS_POSITION_NONE', 'Nicht anzeigen');
 \define('_MI_WGEVENTS_GMAPS_POSITION_TOP', 'Google Map am Beginn anzeigen');
 \define('_MI_WGEVENTS_GMAPS_POSITION_BOTTOM', 'Google Map am Ende anzeigen');
