@@ -9,6 +9,7 @@
  - created new block templates (goffy)
  - fixed bug in output excel (goffy)
  - removed duplicates of cats (goffy)
+ - gmap on index page (goffy)
 
 ==============================================================
 1.0.4 RC1 [2022/08/29]
